--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,48 @@
+/* Place your CSS styles in this file */
 body {
-  background-color: #e5ffe5;
+  font-family: "Comic Sans MS", cursive;
+  background-color: rgb(238, 255, 223);
   text-align: center;
 }
-
+h1,h2,h3,h4,h5,h6 {
+  font-size: 3em;
+}
+/*button decoration*/
 button {
-  border-radius: 4px;
   background-color: limegreen;
-  height: 30px;
-  width: auto;
-  padding: 0px 2px;
+  border: 3px solid limegreen;
+  border-radius: 8px;
+  color: black;
+  text-align: center;
+  transition-duration: 0.2s;
+  display: inline-block;
+  font-size: 1em;
+  margin: 0px 0px;
+  cursor: pointer;
+  box-shadow: 0 6px #999
+}
+button:active {
+  color: black;
+  box-shadow: 0 4px #666;
+  transform: translateY(2px);
+}
+/*link decoraton*/
+a {
+  text-decoration: none;
+}
+a:link {
+  color: darkcyan;
+}
+a:visited {
+  color: olivedrab;
+}
+a:hover {
+  text-decoration: underline;
+}
+/*image decoration*/
+img.full {
+  border: 3px solid gray;
+  border-radius: 5px;
 }
 
 div.layout {
@@ -19,4 +53,19 @@ div.layout {
   border-radius: 4px;
   float: left;
   margin: 5px
+}
+
+div.bord {
+  background-color: #fffeaf;
+  border-style: solid;
+  border-width: 3px;
+  border-color: DarkGrey;
+  border-radius: 4px;
+  float: left;
+  margin: auto;
+  padding: 5px
+}
+
+input.q {
+  float: right;
 }
