--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,9 @@ div.bord {
   padding: 5px
 }
 
-input.q {
-  float: right;
+div.download {
+  width:200px;
+  height:200px;
+  border-style:solid;
+  border-color:LightGrey
 }
