--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,5 @@ div.bord {
 div.download {
   width:200px;
   height:200px;
-  border-style:solid;
-  border-color:LightGrey
+  border: 3px solid lightgray;
 }
