--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,8 @@ div.bord {
 }
 
 div.download {
-  width:200px;
-  height:200px;
+  width:100px;
+  height:100px;
   border: 3px solid lightgray;
+  float:center;
 }
